--- a/css/calculadora.css
+++ b/css/calculadora.css
@@ -96,24 +96,6 @@
     right: 10px; /* Ajusta este valor para moverlo hacia la derecha */
 }
 
-/*BOTÓN AYUDA*/
-.help-button {
-    background-color: #ffc107;
-    color: white;
-    width: 45px;
-    height: 45px;
-    border-radius: 50%;
-    border: none;
-    font-size: 36px;
-    cursor: pointer;
-    position: absolute;
-    right: 40px; /* Ajustado a la derecha */
-    top: 600px; /* Ajustado para un mejor diseño responsive */
-    z-index: 1001;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
 /*BOTÓN AYUDA*/
 .help-button {
@@ -121,13 +103,13 @@
     color: white;
     width: 45px;
     height: 45px;
-    border-radius: 50%;
+    border-radius:50%;
     border: none;
     font-size: 36px;
     cursor: pointer;
     position: absolute;
-    right: 40px; /* Ajustado a la derecha */
-    top: 600px; /* Ajustado para un mejor diseÃ±o responsive */
+    right: 80px; /* Ajustado a la derecha */
+    top: 800px; /* Ajustado para un mejor diseño responsive */
     z-index: 1001;
     display: flex;
     justify-content: center;
@@ -144,26 +126,48 @@
     background-color: #f9f9f9;
     padding: 10px;
     position: absolute;
-    top: 600px; /* Ajustado para un mejor diseÃ±o responsive */
-    right: calc(40px + 45px + 10px); /* Ajustado para que estÃ© al lado del icono */
+    top: 800px; /* Ajustado para un mejor diseño responsive */
+    right: calc(80px + 45px + 10px); /* Ajustado para que esté al lado del icono */
     border-radius: 8px;
-    max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeÃ±as */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* AÃ±adido sombra para mejor visibilidad */
-}
+    max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeñas */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Añadido sombra para mejor visibilidad */
 
-/* Estilo para el mensaje cuando estÃ¡ visible */
+}
+/* Estilo para el mensaje cuando está visible */
 .help-content.active {
     display: block;
 }
 
 @media(max-width: 767px) {
+    #nombre {
+        width: 100%;
+    }
+
+    #telefono {
+        width: 200px;
+    }
+    
+    #correo {
+        width: 200px; 
+    }
 
     .help-button {
-        width: 35px;
-        height: 35px;
-        font-size: 25px;
-        top: 1000px;
-        right: 20px; /* Ajustado a la derecha */
+        
+            width: 35px;
+            height: 35px;
+            border-radius:50%;
+            font-size: 25px;
+            top: 1250px;
+            right: 40px; /* Ajustado a la derecha */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1001;
+            cursor: pointer;
+            box-sizing: border-box; /* Asegura que el padding y el border se incluyan en el tamaño total del botón */
+            padding: 0; /* Asegura que no haya padding */
+            margin: 0; /* Asegura que no haya margin */
+            border: none; /* Elimina cualquier borde */
     }
 
     .help-icon {
@@ -171,8 +175,8 @@
     }
 
     .help-content {
-        top: 1000px;
+        top: 1250px;
         font-size: 12px;
-        right: calc(20px + 35px + 10px); /* Ajustado para que estÃ© al lado del icono */
+        right: calc(40px + 35px + 10px); /* Ajustado para que estÃ© al lado del icono */
     }
 }
