--- a/css/inicio.css
+++ b/css/inicio.css
@@ -223,6 +223,12 @@ como los de dispositivos móviles.*/
     .filtromuni, .filtrodistrito, .filtrotipo{
         width: 50vh;
     }
+
+     /* Añadir márgenes laterales al pisosContainer en modo móvil */
+     #pisosContainer {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 }
 
 
