--- a/css/inicio.css
+++ b/css/inicio.css
@@ -216,12 +216,12 @@ como los de dispositivos móviles.*/
         margin-bottom: 10px; /* Margen inferior */
     }
 
-    .filtroop, .filtroestado, .filtrohab, .filtrobanos {
-        width: 25vh;
+    .filtrohab, .filtrobanos {
+        width: 25%;
     }
 
-    .filtromuni, .filtrodistrito, .filtrotipo{
-        width: 50vh;
+    .filtromuni, .filtrodistrito, .filtrotipo, .filtroop, .filtroestado{
+        width: 50%;
     }
 
      /* Añadir márgenes laterales al pisosContainer en modo móvil */
