--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -102,7 +102,7 @@
     .help-content {
         top: 760px;
         font-size: 12px;
-        right: calc(40px + 35px + 10px); /* Ajustado para que estÃ© al lado del icono */
+        right: calc(40px + 35px + 10px); /* Ajustado para que esta al lado del icono */
     }
 }
 
