--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -32,9 +32,9 @@
     border: none;
     font-size: 36px;
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     right: 80px; /* Ajustado a la derecha */
-    top: 750px; /* Ajustado para un mejor diseño responsive */
+    top: 600px; /* Ajustado para un mejor diseño responsive */
     z-index: 1001;
     display: flex;
     justify-content: center;
@@ -50,8 +50,8 @@
     display: none;
     background-color: #f9f9f9;
     padding: 10px;
-    position: absolute;
-    top: 750px; /* Ajustado para un mejor diseño responsive */
+    position: fixed;
+    top: 600px; /* Ajustado para un mejor diseño responsive */
     right: calc(80px + 45px + 10px); /* Ajustado para que esté al lado del icono */
     border-radius: 8px;
     max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeñas */
@@ -85,6 +85,7 @@
             top: 760px;
             right: 40px; /* Ajustado a la derecha */
             display: flex;
+            position:fixed;
             justify-content: center;
             align-items: center;
             z-index: 1001;
@@ -101,6 +102,7 @@
 
     .help-content {
         top: 760px;
+        position:fixed;
         font-size: 12px;
         right: calc(40px + 35px + 10px); /* Ajustado para que esta al lado del icono */
     }
