--- a/css/gestionaPropiedad.css
+++ b/css/gestionaPropiedad.css
@@ -101,7 +101,7 @@
     }
 
     .help-content {
-        top: 500px
+        top: 500px;
         position:fixed;
         font-size: 12px;
         right: calc(40px + 35px + 10px); /* Ajustado para que esta al lado del icono */
