--- a/css/piso.css
+++ b/css/piso.css
@@ -122,9 +122,9 @@ td {
     border: none;
     font-size: 36px;
     cursor: pointer;
-    position: absolute;
+    position: fixed;
     right: 80px; /* Ajustado a la derecha */
-    top: 1200px; /* Ajustado para un mejor diseño responsive */
+    top: 600px; /* Ajustado para un mejor diseño responsive */
     z-index: 1001;
     display: flex;
     justify-content: center;
@@ -140,8 +140,8 @@ td {
     display: none;
     background-color: #f9f9f9;
     padding: 10px;
-    position: absolute;
-    top: 1200px; /* Ajustado para un mejor diseño responsive */
+    position: fixed;
+    top: 600px; /* Ajustado para un mejor diseño responsive */
     right: calc(80px + 45px + 10px); /* Ajustado para que esté al lado del icono */
     border-radius: 8px;
     max-width: 200px; /* Asegura que el contenido no desborde en pantallas pequeñas */
@@ -172,9 +172,10 @@ td {
             height: 35px;
             border-radius:50%;
             font-size: 25px;
-            top: 1600px;
+            top: 500px;
             right: 40px; /* Ajustado a la derecha */
             display: flex;
+            position:fixed;
             justify-content: center;
             align-items: center;
             z-index: 1001;
@@ -190,7 +191,8 @@ td {
     }
 
     .help-content {
-        top: 1600px;
+        top: 500px;
+        position:fixed;
         font-size: 12px;
         right: calc(40px + 35px + 10px); /* Ajustado para que estÃ© al lado del icono */
     }
